adding endpoints for user app configs
