# go/model_user_app_config.go
@@ -1,0 +1,18 @@
+/*
+ * OpenLattice API
+ *
+ * OpenLattice API
+ *
+ * API version: 0.0.1
+ * Contact: support@openlattice.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openlattice
+// UserAppConfig struct for UserAppConfig
+type UserAppConfig struct {
+	OrganizationId string `json:"organizationId,omitempty"`
+	EntitySetCollectionId string `json:"entitySetCollectionId,omitempty"`
+	Roles []string `json:"roles,omitempty"`
+	Settings map[string]map[string]interface{} `json:"settings,omitempty"`
+}
